2002-01-10  Alasdair Allan <aa@astro.ex.ac.uk>

        * Original version.
